--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=your-rds-endpoint-here
+DB_HOST=c2t80sc0yaju.us-east-1.rds.amazonaws.com
 DB_USER=admin
-DB_PASSWORD=yourpassword
+DB_PASSWORD=Password123!
 DB_NAME=gallery
