made some changes

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_HOST=c2t80sc0yaju.us-east-1.rds.amazonaws.com
+DB_HOST=gallery.c2t80sc0yaju.us-east-1.rds.amazonaws.com
+DB_PORT=3306
 DB_USER=admin
 DB_PASSWORD=Password123!
 DB_NAME=gallery
